--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   mongodb_container:
-    image: mongo:latest
+    image: mongo:4.4.5
     container_name: monogo
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
@@ -12,7 +12,7 @@ services:
       - ./data/mongo:/data/db
 
   neo4j: 
-    image: neo4j:3.5.17
+    image: neo4j:4.4.9
     container_name: neo4j 
     environment: 
       - NEO4J_AUTH=neo4j/rem8271206
@@ -23,4 +23,24 @@ services:
     volumes: 
       - ./data/neo4j/data:/var/lib/neo4j/data
       - ./logs/neo4j/log:/var/lib/neo4j/logs
-      - ./addons/neo4j/plugins:/var/lib/neo4j/plugins
+      # - ./addons/neo4j/plugins:/var/lib/neo4j/plugins
+
+
+  # node:
+  #   image: trufflesuite/ganache-cli:latest
+  #   ports:
+  #     - "8545:8545"
+  #   volumes:
+  #     - ./ganache_data:/ganache_data
+  #   entrypoint:
+  #     - node
+  #     - /app/ganache-core.docker.cli.js
+  #     - --deterministic
+  #     - --db=/ganache_data
+  #     - --mnemonic
+  #     - 'minimum symptom minute gloom tragic situate silver mechanic salad amused elite beef'
+  #     - --networkId
+  #     - '5777'
+  #     - --hostname
+  #     - '0.0.0.0'
+  #     - --debug
